使用守护线程,解决使用exec命令中线程无法被释放问题